opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/timezone"
bug-reports: "https://github.com/janestreet/timezone/issues"
dev-repo: "git+https://github.com/janestreet/timezone.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/timezone/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "ppx_diff"
  "ppx_jane"
  "ppx_stable_witness"
  "sexplib"
  "stdio"
  "dune"               {>= "3.11.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Time-zone handling"
description: "
Timezone handles parsing timezone data and create [Timezone.t] that
can later be used to manipulate time in core_kernel or core.
"
